<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/user"
        />
    <item
        android:id="@+id/addHomeCity"
        android:title="@string/add_home_city"
        android:icon="@drawable/baseline_add_circle_24"
        />
    <item
        android:id="@+id/bookings"
        android:title="@string/my_bookings"
        android:icon="@drawable/vehicle_list"
        />
    <item
        android:id="@+id/wallet"
        android:title="@string/wallet"
        android:icon="@drawable/wallet"
        />

    <item
        android:id="@+id/documents"
        android:title="@string/documents"
        android:icon="@drawable/documents"
        />

    <item
        android:id="@+id/vehicleList"
        android:title="@string/vehicle_list"
        android:icon="@drawable/vehicle_list"
        />

    <item
        android:id="@+id/driverList"
        android:title="@string/driver_list"
        android:icon="@drawable/add_user"
        />
 <item
        android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/notification"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/add_user"
        />

    <item
        android:id="@+id/support"
        android:title="@string/support"
        android:icon="@drawable/baseline_contact_support_24"
        />
    <item
        android:id="@+id/shareApp"
        android:title="@string/shareApp"
        android:icon="@drawable/shared"
        />

    </group>

</menu>