<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_dialog_shape"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_scan_document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:text="@string/select_photo"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/open_camera"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/poppins_bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/pick_from_gallery"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/poppins_bold"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:background="@drawable/alert_dialog_shape"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
</LinearLayout>