<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/enter_your_basic_details_for_registration"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignIn" />


            <com.google.android.material.card.MaterialCardView
                style="@style/MyCardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/txtSignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/rounded_edittext"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/enter_name"
                        android:inputType="text"
                        android:maxLength="30"
                        android:minHeight="@dimen/_35sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvName"
                        app:layout_constraintWidth_percent="0.9" />

                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/mobile_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etName" />


                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/rounded_edittext"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:minHeight="@dimen/_35sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPhone"
                        app:layout_constraintWidth_percent="0.9" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etPhone" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/rounded_edittext"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:minHeight="@dimen/_35sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvEmail"
                        app:layout_constraintWidth_percent="0.9" />

                    <TextView
                        android:id="@+id/tvReferCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Referal Code(Optional)"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etEmail" />

                    <EditText
                        android:id="@+id/etReferCode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/rounded_edittext"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Enter Referral Code"
                        android:inputType="textEmailAddress"
                        android:minHeight="@dimen/_35sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvReferCode"
                        app:layout_constraintWidth_percent="0.9" />


                    <RelativeLayout
                        android:id="@+id/relTerms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etReferCode">

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-10dp"
                            android:buttonTint="@color/colorPrimary" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tvTermsCondition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@+id/checkBox"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/terms_conditions"
                            android:textSize="14dp" />

                    </RelativeLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/button_bg_rounded"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relTerms"
                        app:layout_constraintWidth_percent="0.9" />


                    <RelativeLayout
                        android:id="@+id/relLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="@dimen/_16sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnSignUp">

                        <TextView
                            android:id="@+id/tvAlreadyAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/already_have_an_account"
                            android:textColor="@color/black"
                            android:textSize="14dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@+id/tvAlreadyAccount"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/signin"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14dp" />

                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>