<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_green_50"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/button_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/ok"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDialog" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnYes"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>